<resources>
    <string name="app_name">Project8</string>
    <string name="action_settings">Settings</string>

    <string name="TodayTasks">Today</string>
    <string name="WeekTasks">Week</string>
    <string name="Goals">Goals</string>

    <string name="content_authority">com.blogspot.sttony.project8.app</string>

    <string name="view_field_Task">Task</string>
    <string name="view_field_Title">Title</string>
    <string name="view_field_Due_Date">Due Date</string>

    <string name="view_field_Goal">Goal</string>
    <string name="view_field_Quantity">Quantity</string>
    <string name="view_field_Unit">Unit</string>
    <string name="view_field_In">In</string>
    <string name="view_field_Duration">Duration</string>
    <string name="view_field_Weeks">weeks</string>
    <string name="view_field_Divide">Divide</string>
    <string name="view_field_As">as</string>
    <string name="view_field_NumofTask">num</string>

    <string name="GOOGLE_SHEET_CLIENT_ID">542617036223-18t8cn062h7dlc1o4qg2141j2cqa138p.apps.googleusercontent.com </string>
    <string name="GOOGLE_SHEET_CLIENT_SECRET"></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
