<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blogspot.sttony.project8.GoalActivity">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:columnCount="6"
        android:orientation="horizontal"
        android:rowCount="5"
        tools:context="com.blogspot.sttony.project8.GoalActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:text="@string/view_field_Goal"
            android:textSize="@dimen/abc_text_size_title_material"
            android:textStyle="bold" />

        <!-- title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/view_field_Title"
            android:textSize="@dimen/abc_text_size_title_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_column="1"
            android:layout_columnSpan="5"
            android:layout_row="1"
            android:hint="@string/view_field_Title"
            android:singleLine="true"
            android:id="@+id/view_field_goal_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/view_field_Divide"
            android:textSize="@dimen/abc_text_size_title_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:hint="@string/view_field_Quantity"
            android:singleLine="true"
            android:inputType="number"
            android:id="@+id/view_field_goal_quantity" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:hint="@string/view_field_Unit"
            android:singleLine="true"
            android:id="@+id/view_field_goal_unit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/view_field_As"
            android:textSize="@dimen/abc_text_size_title_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="2"
            android:hint="@string/view_field_NumofTask"
            android:singleLine="true"
            android:id="@+id/view_field_goal_SubTask" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_row="2"
            android:text="@string/view_field_Task"
            android:textSize="@dimen/abc_text_size_title_material" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/view_field_In"
            android:textSize="@dimen/abc_text_size_title_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:hint="@string/view_field_Duration"
            android:singleLine="true"
            android:id="@+id/view_field_goal_Duration"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/view_field_Weeks"
            android:textSize="@dimen/abc_text_size_title_material" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:layout_row="4"
            android:background="@drawable/black_border"
            >

        </FrameLayout>

    </GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/view_field_goal_save"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>
